tests: Cover more paths to try_schedule_cleanup

--- a/Makefile.am
+++ b/Makefile.am
@@ -630,6 +630,8 @@ TESTS = \
 	tests/ev/test_plus \
 	tests/ev/test_coroutine_cleanup \
 	tests/ev/test_coroutine_unattached_leak \
+	tests/ev/test_coroutine_attached_before_finalize \
+	tests/ev/test_coroutine_io_gone_before_finalize \
 	tests/ev/test_runcmd \
 	tests/ev/test_semaphore \
 	tests/ev/test_throw_in_then \
