--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Free disk space
+      run: |
+        df -h
+        sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/lib/android || true
+        sudo apt-get clean || true
+        df -h
     - name: Install build + coverage dependencies
       run: |
         sudo apt-get update
@@ -39,13 +45,13 @@ jobs:
         autoreconf -fi
         ./configure \
           --disable-valgrind \
-          CFLAGS='-Og -g --coverage' \
-          CXXFLAGS='-Og -g --coverage' \
+          CFLAGS='-Og --coverage' \
+          CXXFLAGS='-Og --coverage' \
           LDFLAGS='--coverage'
     - name: Build + run unit tests
       run: |
-        make -j$(nproc)
-        make -j$(nproc) check-TESTS
+        make -j2
+        make -j2 check-TESTS
     - name: Generate HTML coverage report
       run: |
         make coverage-report
