--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,12 @@ jobs:
     - name: Generate HTML coverage report
       run: |
         make coverage-report
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: coverage.info
+        fail_ci_if_error: false
     - name: Upload coverage (HTML)
       uses: actions/upload-artifact@v4
       with:
