--- a/Makefile.am
+++ b/Makefile.am
@@ -602,6 +602,7 @@ TESTS = \
 	tests/boss/test_feemodderbypricetheory \
 	tests/boss/test_forwardfeemonitor \
 	tests/boss/test_getmanifest \
+	tests/boss/test_invoicepayer_decodepay \
 	tests/boss/test_initialrebalancer \
 	tests/boss/test_jitrebalancer \
 	tests/boss/test_needsconnectsolicitor \
